@@ -28,6 +28,7 @@ git-annex (4.20130724) UNRELEASED; urgency=low
   * OSX: Make git-annex-webapp run in the background, so that the app icon
     can be clicked on the open a new webapp when the assistant is already
     running.
+  * Improve test suite on Windows; now tests git annex sync.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 23 Jul 2013 12:39:48 -0400
 
